<resources>
    <string name="app_name">My Restaurant</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Restaurant</string>
    <string name="nav_header_subtitle">myrestaurant@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="update_information">Update Information</string>
    <string name="sign_out">Sign out</string>
    <string name="nearby_restaurant">Nearby Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="update_info">Update Information</string>
    <string name="money_sign">$</string>
    <string name="menu_fav">Favorites</string>
</resources>