<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_baseline_restaurant_gray_24"
            android:title="@string/nearby_restaurant" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
    <group>
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_baseline_history_gray_24"
            android:title="@string/order_history" />
    </group>
    <group>
        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_baseline_account_gray_circle_24"
            android:title="@string/update_info" />
    </group>
    <group>
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_baseline_exit_gray_to_app_24"
            android:title="@string/sign_out" />
    </group>
</menu>